fix z-index bug

--- a/index.css
+++ b/index.css
@@ -16,6 +16,26 @@ body {
   color: white;
 }
 
+div.success-container {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0 1rem;
+}
+
+div.success-container a {
+  display: block;
+  margin: 1rem 0;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  background-color: aliceblue;
+  color: black;
+  font-weight: 900;
+}
+
 .noscroll {
   overflow: hidden;
 }
@@ -62,7 +82,7 @@ div.menu .menu-icon {
   position: relative;
   padding: 26px 0;
   cursor: pointer;
-  z-index: 10;
+  z-index: 300;
 }
 
 div.menu .menu-icon small.menu-icon-line {
@@ -130,6 +150,19 @@ span.error {
   border-radius: 0 0 5px 5px;
   box-sizing: border-box;
 }
+.password-container {
+  position: relative;
+  z-index: 0;
+}
+
+i.far {
+  z-index: 0;
+  position: absolute;
+  right: 1rem;
+  top: 2.7rem;
+  color: rgb(255, 0, 0);
+  cursor: pointer;
+}
 
 @media screen and (max-width: 600px) {
   /* menu btn & icon */
@@ -149,10 +182,10 @@ span.error {
     width: 100%;
     height: 100%;
     background-color: rgb(73, 72, 72);
+    z-index: 200;
   }
 
   div.menu .mobile-menu {
-    z-index: 200;
     position: absolute;
     top: 10rem;
     left: 0;
@@ -183,16 +216,4 @@ span.error {
     background-color: black;
     color: white;
   }
-}
-
-.password-container {
-  position: relative;
-}
-
-i.far {
-  position: absolute;
-  right: 1rem;
-  top: 2.7rem;
-  color: rgb(255, 0, 0);
-  cursor: pointer;
 }
